Fixed discoloration of buttons on ios devices

--- a/main/static/main/css/layout.css
+++ b/main/static/main/css/layout.css
@@ -45,6 +45,7 @@ main {
     position: relative;
 }
 button {
+    background: white;
     border: none;
     padding: .2em 2em; margin: .5em 0;
     border-radius: 1em;
